force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/NCMT_TCO_HP_Level_of_Service__c.object-meta.xml
<CustomObject>
    <label>TCO HP Level of Service</label>
    <nameField>
        <displayFormat>LOS-{000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TCO HP Level of Service</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>