force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/BT12__c.field-meta.xml
<CustomField>
    <fullName>BT12__c</fullName>
    <formula>Total_Heating_Load_WF__c *  USF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BT12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>