force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/BT17__c.field-meta.xml
<CustomField>
    <fullName>BT17__c</fullName>
    <formula>Sum_cf_SF_Yr_WF__c *  USF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BT17</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>