force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/BT19__c.field-meta.xml
<CustomField>
    <fullName>BT19__c</fullName>
    <formula>Min_Air_Change__c *  USF__c * 9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BT19</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>