force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Cooling_Kbtu_SF__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Kbtu_SF__c</fullName>
    <formula>Total_Cooling_Load_WF__c * 0.001/ (TCO_Performance_Input__r.Cooling_Efficiency_CoP_P__c *(1- TCO_Performance_Input__r.Cooling_Sytem_Los__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cooling Kbtu/SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>