force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Ease_of_Access_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_Access_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operational Eff Parameter</label>
    <referenceTo>NCMT_TCO_Parameter__c</referenceTo>
    <relationshipLabel>TCO HP Level of Service</relationshipLabel>
    <relationshipName>TCO_HP_Level_of_Service</relationshipName>
    <type>Lookup</type>
</CustomField>