force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Electrical_Energy__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Energy__c</fullName>
    <formula>Cooling_Kbtu_SF__c + ( TCO_Performance_Input__r.Cooling_Pump_Energy_kBtu_SF_Yr__c  +  TCO_Performance_Input__r.Heating_Pump_Energy_kBtu_SF_Yr__c +  TCO_Performance_Input__r.Fan_Efficiency_Perf__c ) + ( Round(Plug_Heat_Generation__c,2) +  Round(Lightning_Heat_Generation__c,2) )/1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Electrical Energy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>