force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Energy_Electricity__c.field-meta.xml
<CustomField>
    <fullName>Energy_Electricity__c</fullName>
    <formula>if( HP_Parameter__r.Land_Related__c ==true,(HP_Parameter__r.LPD_W_SF__c * 2920*  USF__c)/1000,  ((Electrical_Energy__c + (Gas_Energy__c * (Value(Text(TCO_Performance_Input__r.X100_Electric__c)))))* USF__c) -  Energy_Other_Cooling__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Electricity*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>