force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Energy_Gas__c.field-meta.xml
<CustomField>
    <fullName>Energy_Gas__c</fullName>
    <formula>if( HP_Parameter__r.Land_Related__c ==true, 0, Gas_Energy__c *  USF__c *  (1-Value(Text(TCO_Performance_Input__r.X100_Electric__c))) -  Energy_Other_Heating__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>