force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Energy_Other_Heating__c.field-meta.xml
<CustomField>
    <fullName>Energy_Other_Heating__c</fullName>
    <formula>if( HP_Parameter__r.Land_Related__c ==true, 0, Gas_Energy__c *  USF__c *  Value(Text(TCO_Cost_Rates__r.Other_Heating__c)) * (1-Value(Text( TCO_Performance_Input__r.X100_Electric__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Other Heating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>