force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Energy_Renewable__c.field-meta.xml
<CustomField>
    <fullName>Energy_Renewable__c</fullName>
    <formula>Energy_Electricity__c *  TCO_Performance_Input__r.Renewable_Energy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Energy-Renewable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>