force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Energy_Water__c.field-meta.xml
<CustomField>
    <fullName>Energy_Water__c</fullName>
    <formula>Water_Occ__c *  USF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total-Water</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>