force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Gas_Cost__c.field-meta.xml
<CustomField>
    <fullName>Gas_Cost__c</fullName>
    <formula>Energy_Gas__c *  TCO_Cost_Rates__r.Gas_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gas Cost*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>