force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Gas_Energy__c.field-meta.xml
<CustomField>
    <fullName>Gas_Energy__c</fullName>
    <formula>Heating_Kbtu_SF__c   + 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gas Energy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>