force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Glazing_SHG__c.field-meta.xml
<CustomField>
    <fullName>Glazing_SHG__c</fullName>
    <formula>TCO_Performance_Input__r.Total_Btu_GSF_per_year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Glazing SHG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>