force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Grid_Energy_Cost__c.field-meta.xml
<CustomField>
    <fullName>Grid_Energy_Cost__c</fullName>
    <formula>Energy_Grid__c  * ( TCO_Cost_Rates__r.Electricity_Base_Rate__c *
((( TCO_Cost_Rates__r.TDV_Ratio_peak__c -1)/2)+1))/3.4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grid Energy Cost*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>