force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Grid_Energy_Cost_WF_c__c.field-meta.xml
<CustomField>
    <fullName>Grid_Energy_Cost_WF_c__c</fullName>
    <label>Grid Energy Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>