force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Heating_Kbtu_SF__c.field-meta.xml
<CustomField>
    <fullName>Heating_Kbtu_SF__c</fullName>
    <formula>Total_Heating_Load__c * 0.001/( TCO_Performance_Input__r.Heating_Efficiency_P__c *(1- TCO_Performance_Input__r.Heating_System_Los__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heating Kbtu/SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>