force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/J_Cost_Mod_Param__c.field-meta.xml
<CustomField>
    <fullName>J_Cost_Mod_Param__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Janitorial Cost Modifier Parameter</label>
    <referenceTo>NCMT_TCO_Parameter__c</referenceTo>
    <relationshipLabel>TCO HP Level of Service (Janitorial Cost Modifier Parameter)</relationshipLabel>
    <relationshipName>TCO_HP_Level_of_Service1</relationshipName>
    <type>Lookup</type>
</CustomField>