force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Janitorial_Cleanliness__c.field-meta.xml
<CustomField>
    <fullName>Janitorial_Cleanliness__c</fullName>
    <label>Janitorial/Cleanliness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Exemplary</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Superior</label>
            </value>
            <value>
                <fullName>3</fullName>
                <default>true</default>
                <label>Generally Acceptable</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Poor</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Very poor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>