force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Janitorial_Cost_HP__c.field-meta.xml
<CustomField>
    <fullName>Janitorial_Cost_HP__c</fullName>
    <formula>Round(((((Round((Total_Cleaning_Hr_kSF__c / OpeEff_Modifier__c),2)) * TCO_Cost_Rates__r.Janitorial_Rate__c)/1000) * USF__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Janitorial Cost - Housing Plan*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>