force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Janitorial_Cost_HP_WF__c.field-meta.xml
<CustomField>
    <fullName>Janitorial_Cost_HP_WF__c</fullName>
    <label>Janitorial Cost HP</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>