force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Landscape_and_Site_Maint_Cost__c.field-meta.xml
<CustomField>
    <fullName>Landscape_and_Site_Maint_Cost__c</fullName>
    <formula>If(HP_Parameter__r.Land_Related__c==true,
(Janitorial_Cost_HP__c  +  Maintenance_Cost__c + Supplies_Cost__c),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landscape and Site Maint. Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>