force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Landscape_Cost_WF__c.field-meta.xml
<CustomField>
    <fullName>Landscape_Cost_WF__c</fullName>
    <label>Landscape Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>