force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Lightning_Heat_Generation__c.field-meta.xml
<CustomField>
    <fullName>Lightning_Heat_Generation__c</fullName>
    <formula>HP_Parameter__r.LPD_W_SF__c *  Open_H_SF__c  * 3.4 *  (TCO_Performance_Input__r.Lighting_control_P__c) *  TCO_Performance_Input__r.Lighting_design_P__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lightning Mod (Ltg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>