force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Maintenance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Cost__c</fullName>
    <formula>((USF__c *  HP_Parameter__r.Maint_Hr_kSF__c *  TCO_Cost_Rates__r.General_Maintenance_Rate__c)/1000) *  TCO_Performance_Input__r.R_Maint_Cost_Mod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Cost*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>