force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Maintenance_Cost_WF__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Cost_WF__c</fullName>
    <label>Maintenance Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>