force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Min_Air_Change__c.field-meta.xml
<CustomField>
    <fullName>Min_Air_Change__c</fullName>
    <label>Min. Air Change</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>