force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/NPV_Summary__c.field-meta.xml
<CustomField>
    <fullName>NPV_Summary__c</fullName>
    <label>NCMT AnnualCost Summary</label>
    <referenceTo>NCMT_TCO_Annual_Cost_Summary__c</referenceTo>
    <relationshipLabel>TCO HP Level of Service</relationshipLabel>
    <relationshipName>TCO_HP_Level_of_Service</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>