force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Occ_cf_SF_Yr__c.field-meta.xml
<CustomField>
    <fullName>Occ_cf_SF_Yr__c</fullName>
    <formula>if(USF_Occupant__c==0, 0, (HP_Parameter__r.CFM_Person__c/USF_Occupant__c )* 60 *  (

IF(VALUE(TEXT(TCO_Performance_Input__r.Occupancy_Control__c)) ==0, Round(Occ_H_SF_Yr__c,0),  Round(Open_H_SF__c,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occ cf/SF/Yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>