force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Occ_H_SF_Yr__c.field-meta.xml
<CustomField>
    <fullName>Occ_H_SF_Yr__c</fullName>
    <formula>Case(Value(text(TCO_Performance_Input__r.Core_Building_Operating_Hours__c)),
1,  HP_Parameter__r.Weekly_Occ_1__c,
2, HP_Parameter__r.Weekly_Occ_2__c,
3, HP_Parameter__r.Weekly_Occ_3__c,
4, HP_Parameter__r.Weekly_Occ_4__c,
5, HP_Parameter__r.Weekly_Occ_5__c,
0) * 52.143</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occ. H/SF/Yr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>