force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Occ_Heat_Generation__c.field-meta.xml
<CustomField>
    <fullName>Occ_Heat_Generation__c</fullName>
    <formula>IF(USF_Occupant__c ==0,0, (( Round(Occ_H_SF_Yr__c,0) / USF_Occupant__c )* 400))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occ Heat (Person)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>