force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Occuant_USF__c.field-meta.xml
<CustomField>
    <fullName>Occuant_USF__c</fullName>
    <formula>IF(USF_Occupant__c == 0, 0, (1/ USF_Occupant__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occuant/USF</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>