force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Off_cf_SF_Yr__c.field-meta.xml
<CustomField>
    <fullName>Off_cf_SF_Yr__c</fullName>
    <formula>HP_Parameter__r.CFM_SF__c * 60 * (8760 -  Round(Open_H_SF__c,0) ) *  TCO_Performance_Input__r.Off_Hours_Set_Back_P__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Off cf/SF/Yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>