force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/OpeEff_Modifier__c.field-meta.xml
<CustomField>
    <fullName>OpeEff_Modifier__c</fullName>
    <formula>CASE( TEXT(Operational_efficiency__c),
&quot;Typical&quot;,  Ease_of_Access_Parameter__r.Typical_EOA__c ,
&quot;Easy&quot;,  Ease_of_Access_Parameter__r.Easy_EOA__c ,
&quot;Difficult&quot;,  Ease_of_Access_Parameter__r.Difficult_EOA__c, 
&quot;Very Difficult&quot;,  Ease_of_Access_Parameter__r.Very_Difficult_EOA__c,
1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operational Efficiency Modifier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>