force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Open_cf_SF_Yr__c.field-meta.xml
<CustomField>
    <fullName>Open_cf_SF_Yr__c</fullName>
    <formula>HP_Parameter__r.CFM_SF__c * 60 *  Round(Open_H_SF__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open cf/SF/Yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>