force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Open_H_SF__c.field-meta.xml
<CustomField>
    <fullName>Open_H_SF__c</fullName>
    <formula>Case(Value(text(TCO_Performance_Input__r.Core_Building_Operating_Hours__c)),
1, HP_Parameter__r.Weekly_open_1__c,
2, HP_Parameter__r.Weekly_open_2__c,
3, HP_Parameter__r.Weekly_Open_3__c,
4, HP_Parameter__r.Weekly_Open_4__c,
5, HP_Parameter__r.Weekly_Open_5__c,
0) * 52.143</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open H/SF/Yr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>