force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Operational_efficiency__c.field-meta.xml
<CustomField>
    <fullName>Operational_efficiency__c</fullName>
    <defaultValue>&quot;Typical&quot;</defaultValue>
    <label>Operational efficiency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Typical</fullName>
            </value>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Difficult</fullName>
            </value>
            <value>
                <fullName>Very Difficult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>