force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Other_Cooling_Cost__c.field-meta.xml
<CustomField>
    <fullName>Other_Cooling_Cost__c</fullName>
    <formula>Energy_Other_Cooling__c * TCO_Cost_Rates__r.Other_Cooling_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Cooling Cost*</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>