force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Other_Heating_Cost__c.field-meta.xml
<CustomField>
    <fullName>Other_Heating_Cost__c</fullName>
    <formula>Energy_Other_Heating__c *  TCO_Cost_Rates__r.Other_Heat_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Heating Cost*</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>