force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Plug_Heat_Generation__c.field-meta.xml
<CustomField>
    <fullName>Plug_Heat_Generation__c</fullName>
    <formula>HP_Parameter__r.Equipment_Load__c *  Round(Occ_H_SF_Yr__c,0)  * 3.4 *  TCO_Performance_Input__r.Plug_load_management_P__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plug Mod (Equip)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>