force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Portable_Water_Cost__c.field-meta.xml
<CustomField>
    <fullName>Portable_Water_Cost__c</fullName>
    <formula>(Water_Portable__c *  TCO_Cost_Rates__r.Water_Rate__c)/1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potable Water Cost*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>