force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCMT Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.USF__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipLabel>TCO HP Level of Service</relationshipLabel>
    <relationshipName>TCO_HP_Level_of_Service1</relationshipName>
    <type>Lookup</type>
</CustomField>