force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Renewable_Energy_Cost__c.field-meta.xml
<CustomField>
    <fullName>Renewable_Energy_Cost__c</fullName>
    <formula>(Energy_Renewable__c * TCO_Performance_Input__r.R_Energy_Purchased__c * TCO_Cost_Rates__r.Renewable_Electricity_Rate__c )/3.4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewable Energy Cost*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>