force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Run_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Run_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>back-end field used to control whether or not LoS workflow rules should run</description>
    <label>Run Workflow</label>
    <type>Checkbox</type>
</CustomField>