force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Sewer_Cost__c.field-meta.xml
<CustomField>
    <fullName>Sewer_Cost__c</fullName>
    <formula>if( HP_Parameter__r.Land_Related__c ==true, 0, ( Energy_Water__c *  TCO_Cost_Rates__r.Sewer_Rate__c )/1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sewer Cost*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>