force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Sewer_Cost_WF__c.field-meta.xml
<CustomField>
    <fullName>Sewer_Cost_WF__c</fullName>
    <label>Sewer Cost</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>