force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Space_Type__c.field-meta.xml
<CustomField>
    <fullName>Space_Type__c</fullName>
    <label>Space Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCMT_Space_Type</valueSetName>
    </valueSet>
</CustomField>