force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Sum_cf_SF_Yr__c.field-meta.xml
<CustomField>
    <fullName>Sum_cf_SF_Yr__c</fullName>
    <formula>Open_cf_SF_Yr__c +  Occ_cf_SF_Yr__c +  Off_cf_SF_Yr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum cf/SF/Yr*</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>