force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Sum_cf_SF_Yr_WF__c.field-meta.xml
<CustomField>
    <fullName>Sum_cf_SF_Yr_WF__c</fullName>
    <label>Sum cf/SF/Yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>