force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Supplies_Cost__c.field-meta.xml
<CustomField>
    <fullName>Supplies_Cost__c</fullName>
    <formula>USF__c *   HP_Parameter__r.Supplies_Unit_Cost__c *  Supplies_Cost_Mod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplies Cost*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>