force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Supplies_Cost_Mod__c.field-meta.xml
<CustomField>
    <fullName>Supplies_Cost_Mod__c</fullName>
    <formula>Case( Text(Janitorial_Cleanliness__c), 
&quot;1&quot;,  J_Cost_Mod_Param__r.Exemplary__c ,
&quot;2&quot;,  J_Cost_Mod_Param__r.Superior__c ,
&quot;3&quot;,  J_Cost_Mod_Param__r.Generally_Acceptable__c ,
&quot;4&quot;,  J_Cost_Mod_Param__r.Poor__c,
&quot;5&quot;,  J_Cost_Mod_Param__r.Very_poor__c,
1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cleaning Supplies Cost Modifier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>