force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/TCO_Cost_Rates__c.field-meta.xml
<CustomField>
    <fullName>TCO_Cost_Rates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TCO Cost Rates</label>
    <referenceTo>NCMT_Project_Cost_Rate__c</referenceTo>
    <relationshipLabel>TCO HP Level of Service</relationshipLabel>
    <relationshipName>TCO_HP_Level_of_Service</relationshipName>
    <type>Lookup</type>
</CustomField>