force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/TCO_Performance_Input__c.field-meta.xml
<CustomField>
    <fullName>TCO_Performance_Input__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TCO Performance Input</label>
    <referenceTo>NCMT_TCO_Performance_Input__c</referenceTo>
    <relationshipLabel>TCO HP Level of Service</relationshipLabel>
    <relationshipName>TCO_HP_Level_of_Service</relationshipName>
    <type>Lookup</type>
</CustomField>