force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/TI_Refresh_Cost__c.field-meta.xml
<CustomField>
    <fullName>TI_Refresh_Cost__c</fullName>
    <formula>USF__c *  HP_Parameter__r.TI_Cost_Refresh__c *  Project_Name__r.TI_Adjustment_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI Refresh Cost*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>