force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/TI_Refresh_Cost_WF__c.field-meta.xml
<CustomField>
    <fullName>TI_Refresh_Cost_WF__c</fullName>
    <label>TI Refresh Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>