force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Total_Btu_SF_Yr__c.field-meta.xml
<CustomField>
    <fullName>Total_Btu_SF_Yr__c</fullName>
    <formula>Plug_Heat_Generation__c +  Lightning_Heat_Generation__c + Occ_Heat_Generation__c
+ Glazing_SHG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Btu/SF/Yr*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>