force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Total_Btu_SF_Yr_WF__c.field-meta.xml
<CustomField>
    <fullName>Total_Btu_SF_Yr_WF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Btu/SF/Yr</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>