force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Total_Cleaning_Hr_kSF__c.field-meta.xml
<CustomField>
    <fullName>Total_Cleaning_Hr_kSF__c</fullName>
    <formula>CASE( Text(Janitorial_Cleanliness__c),
&quot;1&quot;,  HP_Parameter__r.Level_1_Total_Hours_ksf__c,
&quot;2&quot;,  HP_Parameter__r.Level_2_Total_Hours_kSF__c,
&quot;3&quot;,  HP_Parameter__r.Level_3_Total_Hours_kSF__c,
&quot;4&quot;,  HP_Parameter__r.Level_4_Total_Hours_kSF__c,
&quot;5&quot;,  HP_Parameter__r.Level_5_Total_Hours_kSF__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cleaning Hr/kSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>