force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Total_Cooling_Load__c.field-meta.xml
<CustomField>
    <fullName>Total_Cooling_Load__c</fullName>
    <formula>((8760 * TCO_Performance_Input__r.Total_CDD_Btu_GSF_per_hour__c) + ( Round(Total_Btu_SF_Yr_WF__c,0)) + ( Round(Sum_cf_SF_Yr__c,0) * TCO_Performance_Input__r.Total_CDD_Btu_CF__c))* (if(HP_Parameter__r.Land_Related__c== true, 0, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cooling Load*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>