force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Total_Cooling_Load_WF__c.field-meta.xml
<CustomField>
    <fullName>Total_Cooling_Load_WF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Cooling Load</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>