force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Total_Electricity_WF__c.field-meta.xml
<CustomField>
    <fullName>Total_Electricity_WF__c</fullName>
    <label>Total Electricity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>