force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Total_Heating_Load__c.field-meta.xml
<CustomField>
    <fullName>Total_Heating_Load__c</fullName>
    <formula>(8760 * TCO_Performance_Input__r.Total_HDD_Btu_GSF_per_hour__c) +  (Total_Btu_SF_Yr_WF__c* TCO_Performance_Input__r.Total_HDD_Btu_CF__c) + (( MIN((8760 * TCO_Performance_Input__r.Total_HDD_Btu_GSF_per_hour__c)*0.5,Total_Btu_SF_Yr_WF__c) *-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Heating Load*</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>