force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/USF__c.field-meta.xml
<CustomField>
    <fullName>USF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>USF</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>