force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/USF_Occupant__c.field-meta.xml
<CustomField>
    <fullName>USF_Occupant__c</fullName>
    <formula>IF(HP_Parameter__r.USF_Occupant__c ==0, 0, HP_Parameter__r.USF_Occupant__c / TCO_Performance_Input__r.Workplace_Eff_Modifier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USF/Occupant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>