force-app/main/default/objects/NCMT_TCO_HP_Level_of_Service__c/fields/Utility_Water_Cost__c.field-meta.xml
<CustomField>
    <fullName>Utility_Water_Cost__c</fullName>
    <formula>(Water_Rec__c *  TCO_Cost_Rates__r.Non_Portable_Water_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utility Water Cost*</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>